# dk-synology-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: mcporter.json
openclaw/: apply_openclaw_jobs.sh  openclaw_jobs_manifest.json  synology_check.sh  synology_check_backup.sh  synology_check_consolidated.sh  synology_check_docker.sh  synology_check_downloads.sh  synology_check_network.sh  synology_check_tasks.sh  synology_jobs.cron  synology_suppressions.json
scripts/: sync-upstream.sh
src/synology_mcp/: __init__.py  server.py
src/synology_mcp/tools/: __init__.py  active_backup.py  backup.py  cloudsync.py  docker_tools.py  downloadstation.py  filestation.py  package.py  photos.py  shares.py  snapshot.py  sysinfo.py  system_tools.py  task_scheduler.py  users_groups.py  virtualization.py
src/synology_mcp/utils/: __init__.py  config.py  connection.py  formatters.py
tests/: test_synology_check.py  test_task_scheduler_tools.py
